💄 Hover Fix and Scrollbar improvement

--- a/frontend/src/app/notifications-panel/notifications-panel.component.scss
+++ b/frontend/src/app/notifications-panel/notifications-panel.component.scss
@@ -20,6 +20,7 @@
     max-height: 50vh;
     overflow-y: hidden;
     font-family: 'Poppins', sans-serif;
+    cursor: initial;
 }
 
 // .notification-ui a:after {
@@ -52,6 +53,7 @@
 .notification-ui_dd-content {
     max-height: 35vh;
     overflow: auto;
+    cursor: pointer;
     //transition: opacity 0.3s ease-in-out;
 }
 
@@ -62,6 +64,24 @@
 // .notification-ui_dd-content:not(.transition-active) {
 //     opacity: 0;
 // }
+
+/* Customize the scrollbar */
+.notification-ui_dd-content::-webkit-scrollbar {
+    width: 8px;
+}
+  
+.notification-ui_dd-content::-webkit-scrollbar-thumb {
+    background-color: #74ACCD;
+    border-radius: 4px;
+}
+  
+.notification-ui_dd-content::-webkit-scrollbar-track {
+    background-color: #f2f2f2;
+}
+
+.notification-ui_dd-content::-webkit-scrollbar-thumb:vertical:hover {
+    background-color: #0e80b5;
+}
 
 .notification-filter {
     display: flex;
